[package]
name = "mpd-filters"
version = "0.2.0"
edition = "2021"
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
description = "A simple mpd query parser library for Rust"
repository = "https://github.com/tsirysndr/mpd-filters"
license = "MIT"
readme = "README.md"
keywords = ["mpd", "query", "parser"]

[dependencies]
